2002-12-12  Marius Vollmer  <mvo@zagadka.ping.de>

	* optargs.scm (improper-list-copy): New.
	(parse-arglist): Use it instead of list-copy.

2002-12-09  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* threads.scm (letpar): New macro.

2002-12-08  Rob Browning  <rlb@defaultvalue.org>

	* debugger/breakpoints/Makefile.am (subpkgdatadir): VERSION ->
	GUILE_EFFECTIVE_VERSION.

	* debugger/Makefile.am (subpkgdatadir): VERSION ->
	GUILE_EFFECTIVE_VERSION.

	* Makefile.am (subpkgdatadir): VERSION -> GUILE_EFFECTIVE_VERSION.

2002-12-04  Mikael Djurfeldt  <mdj@linnaeus>

	* threads.scm (parallel): New macro.
	 (par-map, par-for-each): New procedures.

	* documentation.scm (object-documentation): Added support for
	defmacros.

2002-11-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* boot-9.scm (re-export-syntax):  Re-introduced after accidentally
	removing it in my patch from 2002-11-16.

2002-11-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	Thanks to Mikael Djurfeldt for a bugreport which led to the
	following changes:

	* slib.scm (%system-define): Removed.

	(define): Changed to use define-private instead of
	%system-define.

	* boot-9.scm (define-private): Undid my changes from 2002-11-16
	until Guile supports hygienic macros.

2002-11-17  Neil Jerram  <neil@ossau.uklinux.net>

	* emacs.scm (emacs-load): Locally define `read-and-eval!', as it
	has been removed from the core.

2002-11-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* syncase.scm (define-syntax, eval-when, fluid-let-syntax,
	identifier-syntax, let-syntax, letrec-syntax, syntax, syntax-case,
	syntax-rules, with-syntax, include):  Changed definitions to form
	'real' macro definitions.

2002-11-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* boot-9.scm (define-private, export-syntax, export-syntax):
	Fixed my previous fix (blush).

2002-11-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* boot-9.scm (define-private, export-syntax, export-syntax):
	Changed definitions to form 'real' macro definitions.
